--- a/src/view/Compra/escolherFornecedor.html
+++ b/src/view/Compra/escolherFornecedor.html
@@ -178,7 +178,7 @@
                 </label>
             </p>
 
-            <button type="submit" class="btn_calcular" name="btn_calcular">Finalizar</button>
+            <button type="submit" class="btn_calcular" name="btn_calcular">Continuar</button>
           
         </form>
 
