--- a/src/view/Celeiro/infoItem.html
+++ b/src/view/Celeiro/infoItem.html
@@ -78,69 +78,53 @@
     </div>
     
     <div class="main">
-        <h1>Balanço Patrimonial</h1>
+        <h1>
+            Item do Celeiro
+            <a href="/celeiro">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
+        
+        <form>
+            <fieldset class="dados-Top">
+                <div class="title">
+                    <legend>{{item.nome_item}}</legend>
+                </div>
+                             
+                <div class="read-block">
+                    <label>Quantidade:</label>
+                    <p class="input"> {{item.quantidade_item}}  {{item.contagem_item}}</p>
+                </div>
+                {%if item.validade != 0%}
+                <div class="read-block">
+                    <label style="display: inline;">Validade:</label> <div style="color: red; display: inline;" class='mensagem' >{{mensagem}}</div>
+                    <p class="input">{{item.validade_insumo}}</p>
+                </div>
+                {%else%}
+                {%endif%}
+                
+                <div class="read-block">
+                    <label>Fornecedor:</label>
+                    <p class="input">{{item.nome_fornecedor}}</p>
+                </div>
+                <div class="read-block">
+                    <label>Custo por {{item.contagem_item}}:</label>
+                    <p class="input">R$ {{item.valor_item}}</p>
+                </div>                
+            </fieldset>
+        </form>
 
-        <div id="tabela-balanco">
-            <table id="tabela-ativo">
-                <tr class="title">
-                    <td class="title-col" colspan="2">Ativo</th>
-                </tr>
-                <tr>
-                    <td class="indent">Tipo</td>
-                    <td class="indent">Valor</td>
-                </tr>
-                <tr>
-                    <td class="valor"> <a href="/ativoCirculante">Ativo Circulante</a></td>
-                    <td class="valor">R$ {{ativoCirculante}}</td>
-                </tr>
-                <tr>
-                    <td class="valor"><a href="/ativoPermanente">Ativo Permanente</a></td>
-                    <td class="valor">R$ {{ativoPermanente}}</td>
-                </tr>
-                <tr>
-                    <td class="valor" colspan="2">Total: R$ {{totalAtivo}}</td>
-                </tr>
-            </table> 
-    
-            <table id="tabela-passivo">
-                <tr class="title">
-                    <td class="title-col" colspan="2">Passivo</th>
-                </tr>
-                <tr>
-                    <td class="indent">Tipo</td>
-                    <td class="indent">Valor</td>
-                </tr>
-                <tr>
-                    <td class="valor"> <a href="/passivoCirculante">Passivo Circulante</a></td>
-                    <td class="valor">R$ {{passivoCirculante}}</td>
-                </tr>
-                <tr>
-                    <td class="valor"><a href="/passivoPermanente">Passivo Permanente</a></td>
-                    <td class="valor">R$ {{passivoPermanente}}</td>
-                </tr>
-                <tr>
-                    <td class="valor" colspan="2">Total: R$ {{totalPassivo}}</td>
-                </tr>
-            </table>  
-
-            <table id="tabela-patrimonio">
-                <tr class="title">
-                    <td class="title-col" colspan="2">Patrimônio Líquido</th>
-                </tr>
-                <tr>
-                    <td class="indent">Tipo</td>
-                    <td class="indent">Valor</td>
-                </tr>
-                <tr>
-                    <td class="valor">Capital Social</td>
-                    <td class="valor">R$ {{capitalSocial}}</td>
-                </tr>
-                <tr>
-                    <td class="valor">Patrimonio Líquido</td>
-                    <td class="valor">R$ {{patrimonioLiquido}}</td>
-                </tr>
-            </table> 
-        </div>     
+        {%if mensagem == ''%}
+        <div class="botoes-fim-cadastro">
+            <a href="/inabilitarItemCeleiro" id="cancelar-cadastro"> <p>Descartar</p> </a>
+            <a href=/venderItemCeleiro id="cadastrar-cadastro"> <p>Vender</p> </a>
+        </div>  
+        {%else%}
+        <div class="botoes-fim-cadastro">
+            <a href="/inabilitarItemCeleiro" id="cancelar-cadastro"> <p>Descartar</p> </a>
+        </div>  
+        {%endif%}
     </div>
 </body>
 </html>
