--- a/src/view/Celeiro/venderItem.html
+++ b/src/view/Celeiro/venderItem.html
@@ -78,69 +78,43 @@
     </div>
     
     <div class="main">
-        <h1>Balanço Patrimonial</h1>
+        <h1>
+            Venda de Item
+            <a href="/celeiro">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
+        
+        <form accept="/venderItemCeleiro" method="POST" >
+            <fieldset class="dados-Botton">
+                <div class="title">
+                    <legend> <strong>{{item.nome_item}}</strong>  - {{item.nome_fornecedor}}</legend>
+                </div>
+                             
+                            
+                <div class="write-block">
+                    <label>Quantidade por {{item.contagem_item}}:</label>
+                    <input type="number" name="quantidade" max={{item.quantidade_item}} placeholder="00.0" required>
+                </div>
+                <div class="write-block">
+                    <label>Custo por {{item.contagem_item}}:</label>
+                    <input type="number" name="valor" min=0 placeholder="R$ 00.0" required>
+                </div>  
+                
+                {%if item.validade != 0%}
+                <div class="read-block">
+                    <label>Validade:</label>
+                    <p class="input">{{item.validade_insumo}}</p>
+                </div>
+                {%else%}
+                {%endif%}
+                
+            </fieldset>
 
-        <div id="tabela-balanco">
-            <table id="tabela-ativo">
-                <tr class="title">
-                    <td class="title-col" colspan="2">Ativo</th>
-                </tr>
-                <tr>
-                    <td class="indent">Tipo</td>
-                    <td class="indent">Valor</td>
-                </tr>
-                <tr>
-                    <td class="valor"> <a href="/ativoCirculante">Ativo Circulante</a></td>
-                    <td class="valor">R$ {{ativoCirculante}}</td>
-                </tr>
-                <tr>
-                    <td class="valor"><a href="/ativoPermanente">Ativo Permanente</a></td>
-                    <td class="valor">R$ {{ativoPermanente}}</td>
-                </tr>
-                <tr>
-                    <td class="valor" colspan="2">Total: R$ {{totalAtivo}}</td>
-                </tr>
-            </table> 
-    
-            <table id="tabela-passivo">
-                <tr class="title">
-                    <td class="title-col" colspan="2">Passivo</th>
-                </tr>
-                <tr>
-                    <td class="indent">Tipo</td>
-                    <td class="indent">Valor</td>
-                </tr>
-                <tr>
-                    <td class="valor"> <a href="/passivoCirculante">Passivo Circulante</a></td>
-                    <td class="valor">R$ {{passivoCirculante}}</td>
-                </tr>
-                <tr>
-                    <td class="valor"><a href="/passivoPermanente">Passivo Permanente</a></td>
-                    <td class="valor">R$ {{passivoPermanente}}</td>
-                </tr>
-                <tr>
-                    <td class="valor" colspan="2">Total: R$ {{totalPassivo}}</td>
-                </tr>
-            </table>  
+            <button type="submit" class="btn_calcular" name="btn_calcular">Vender</button>
 
-            <table id="tabela-patrimonio">
-                <tr class="title">
-                    <td class="title-col" colspan="2">Patrimônio Líquido</th>
-                </tr>
-                <tr>
-                    <td class="indent">Tipo</td>
-                    <td class="indent">Valor</td>
-                </tr>
-                <tr>
-                    <td class="valor">Capital Social</td>
-                    <td class="valor">R$ {{capitalSocial}}</td>
-                </tr>
-                <tr>
-                    <td class="valor">Patrimonio Líquido</td>
-                    <td class="valor">R$ {{patrimonioLiquido}}</td>
-                </tr>
-            </table> 
-        </div>     
+        </form>
     </div>
 </body>
 </html>
