--- a/src/view/Producao/criarProducao.html
+++ b/src/view/Producao/criarProducao.html
@@ -78,67 +78,84 @@
     </div>
     
     <div class="main">
-        <h1>Plantação</h1>
-        <form action="/detalheInsumo" method="POST">
+        <h1>
+            Cadastrar Produção
+            <a href="/Plantacao">
+                <img src="/imagem/voltar.png" alt="">
+                Voltar
+            </a>
+        </h1>
+        
+        <form action="/apresentarProducao" method="POST">
             <fieldset class="dados-Top">
                 <div class="title">
-                    <legend>Busca do produto:</legend>
+                    <legend>Dados da Produção</legend>
                 </div>
-                
-                <div class="search-block">
-                    <div class="select">
-                        <label for="codPosicao">Produto:</label>
-                        <select name="codPlantio" id="codPlantio" required>
-                            <option value="" disable="" hidden="">Selecione uma opção</option> 
-                            {%for produto in producao%}
-                                <option value={{produto.cod_Plantacao_Hortalica}}>{{produto.cod_Plantacao_Hortalica}} - {{produto.nome_Hortalica}}</option>
-                            {%endfor%}  
+
+                <div class="radio-block">
+                    <label for="objetivo">Objetivo da Produção:</label>
+                    <p>
+                        <label onclick="comItem()">
+                            <input type="radio" id="comItem" name="objetivo" value="1" checked> Cumprir um Item das Venda
+                        </label>
+                    </p>
+                    <p>
+                        <label onclick="semItem()">
+                            <input type="radio" id="semItem" name="objetivo" value="0"> Vendas Futuras 
+                        </label>
+                    </p>
+                </div>
+
+                <br>
+                <br>
+
+                <div id="com-item">
+                    <div class="write-block">
+                        <label for="itemVenda">Itens de Venda:</label>
+                        <select name="itemVenda" id="itemVenda">
+                            <option value="" disable="" hidden="">Selecione uma opção</option>
+                            {%for item in itensVenda%}
+                            <option value={{item.cod_item}} >{{item.quantidade_produto}} {{item.contagem_hortalica}} de <strong>{{item.nome_hortalica}}</strong> | {{item.nome_cliente}}</option>
+                            {%endfor%}
                         </select>
                     </div>
-                    <button type="submit" class="salvar">
-                        <img src="/imagem/procurar.png" alt="Buscar">
-                    </button>
                 </div>
-            </fieldset>
-            <fieldset class="dados-Top">
-                <table class="table-Detalhe">
-                    <thead>
-                        <tr>
-                            <th colspan="4">O que está sendo produzido</th>
-                        </tr>
-                        <tr class="head">
-                            <th>Códido</th>
-                            <th>Nome da Produto</th>
-                            <th>Quantidade</th>
-                            <th>Dias de Produção</th>
-                        </tr>
-                        <tr>
-                            {%for produto in producao%}
-                                <tr>
-                                    <td>{{produto.cod_Plantacao_Hortalica}}</td>
-                                    <td>{{produto.nome_Hortalica}}</td>
-                                    <td>{{produto.quant_Plantada}}</td>
-                                    <td>{{produto.dt_Plantio}}</td>
-                                </tr>   
-                            {%endfor%} 
-                        </tr>
-                    </thead>
-                </table>
-            </fieldset>
 
-            <div class="button-main">
-                <a href="/aplicarInsumo">Aplicar Insumo</a>
-            </div>
-        </form>
+                <div id="sem-item" style="visibility: hidden;">
+                    <div class="write-block">
+                        <label for="plano">Planos de Produção:</label>
+                        <select name="plano" id="plano">
+                            <option value="" disable="" hidden="">Selecione uma opção</option>
+                            {%for plano in planos%}
+                            <option value={{plano.cod_plano}}><strong>{{plano.nome_plano}}</strong> - PRODUÇÃO: em [{{plano.contagem_hortalica}}] de {{plano.nome_hortalica}} </option>
+                            {%endfor%}
+                        </select>
+                    </div>
 
-        <div class="foot-dados-Botton">
-            <div class="aviso-foot">
-                <p>Visualizar os planos de produção</p>
-            </div>
-            <div class="acoes-n-banco">
-                <a href="/planoProducao" id="cadastrar-banco"> <p>Plano do Produção</p> </a>
-            </div>
-        </div>
+                    <div class="write-block">
+                        <label for="quantidade">Quantidade de Hortaliças:</label>
+                        <input type="number" id="quantidade" name="quantidade" min="1" step=".01" placeholder="000.00">
+                    </div>
+                </div>
+
+                <p class="mensagem" style="color: red;">{{mensagem}}</p>
+
+                <button type="submit" class="btn_calcular" name="btn_calcular">Continuar</button>
+            </fieldset>                
+        </form>        
     </div>
+
+    
 </body>
+<script language="JavaScript">
+    function semItem() {
+        document.getElementById('sem-item').style.visibility = 'visible';
+        document.getElementById('com-item').style.visibility = 'hidden';
+    }
+
+    function comItem() {
+        document.getElementById('com-item').style.visibility = 'visible';
+        document.getElementById('sem-item').style.visibility = 'hidden';
+    }
+</script>
 </html>
